# docker-zyxel-ssh-connector

./: .gitignore  Dockerfile  Dockerfile.bash.zyxel  Dockerfile.build  Dockerfile.zyxel  LICENSE.md  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/: dependabot.yml
.github/actions/check-version-change/: action.yml
.github/workflows/: bash_ci.yml  ci.yml  docker-publish.yml  python_ci.yml
docs/: GS1900.MD
scripts/: test_debug_logging.sh
src/tests/: conftest.py  runner.py  test_cli.py  test_client.py  test_client_extra.py  test_commands.py  test_config.py  test_interface_utils.py  test_mac_table_utils.py  test_parsing.py  test_port_expansion.py  test_real_interactions.py
src/tests/data/: intefaces_cmd.json  mac_table_cmd.json  version_cmd.json  vlans_cmd.json
src/zyxel_cli/: __init__.py  cli.py  client.py  commands.py  config.py  consts.py  interface_utils.py  logging_config.py  mac_table_utils.py  parsing.py
