[project]
name = "zyxel-cli"
version = "0.1.27"
description = "CLI tool for Zyxel GS1900 switches"
requires-python = ">=3.14"
dependencies = [
    "paramiko>=3.4.0",
    "cryptography>=41.0.0",
]

[project.scripts]
zyxel-cli = "zyxel_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=23.0.0",
    "ruff>=0.15.10",
    "isort>=5.0.0",
    "mypy>=1.10.0",
    "types-paramiko>=4.0.0.20260408",
    "coverage-badge>=1.0.0",
    "coverage[toml]>=7.13.5",
]

[tool.coverage.run]
branch = true
source = ["src/zyxel_cli"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["zyxel_cli"]

[tool.mypy]
python_version = "3.10"
strict = false
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = "(^|/)(\\.venv|venv|env)/"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
